fix overflow

--- a/css/thank.css
+++ b/css/thank.css
@@ -16,9 +16,6 @@
     min-height: 60vh;
 
 }
-body{
-    overflow-y: hidden;
-}
 .boxThank{
     flex-grow: 1; 
     display: flex;
